--- a/LCD-Guessing-GameV2/LCD-Guessing-Game/LCD-Guessing-Game/Debug/Makefile
+++ b/LCD-Guessing-GameV2/LCD-Guessing-Game/LCD-Guessing-Game/Debug/Makefile
@@ -44,6 +44,7 @@ C_SRCS +=  \
 ../APP/App.c \
 ../ECUAL/keypad.c \
 ../ECUAL/LCD.c \
+../ECUAL/timers_HAL.c \
 ../main.c \
 ../MCAL/dio.c \
 ../MCAL/timer.c
@@ -59,6 +60,7 @@ OBJS +=  \
 APP/App.o \
 ECUAL/keypad.o \
 ECUAL/LCD.o \
+ECUAL/timers_HAL.o \
 main.o \
 MCAL/dio.o \
 MCAL/timer.o
@@ -67,6 +69,7 @@ OBJS_AS_ARGS +=  \
 APP/App.o \
 ECUAL/keypad.o \
 ECUAL/LCD.o \
+ECUAL/timers_HAL.o \
 main.o \
 MCAL/dio.o \
 MCAL/timer.o
@@ -75,6 +78,7 @@ C_DEPS +=  \
 APP/App.d \
 ECUAL/keypad.d \
 ECUAL/LCD.d \
+ECUAL/timers_HAL.d \
 main.d \
 MCAL/dio.d \
 MCAL/timer.d
@@ -83,6 +87,7 @@ C_DEPS_AS_ARGS +=  \
 APP/App.d \
 ECUAL/keypad.d \
 ECUAL/LCD.d \
+ECUAL/timers_HAL.d \
 main.d \
 MCAL/dio.d \
 MCAL/timer.d
@@ -116,6 +121,13 @@ ECUAL/keypad.o: ../ECUAL/keypad.c
 	
 
 ECUAL/LCD.o: ../ECUAL/LCD.c
+	@echo Building file: $<
+	@echo Invoking: AVR/GNU C Compiler : 5.4.0
+	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.6.364\include"  -Og -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega32 -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.6.364\gcc\dev\atmega32" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+	@echo Finished building: $<
+	
+
+ECUAL/timers_HAL.o: ../ECUAL/timers_HAL.c
 	@echo Building file: $<
 	@echo Invoking: AVR/GNU C Compiler : 5.4.0
 	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.6.364\include"  -Og -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega32 -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.6.364\gcc\dev\atmega32" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
